--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/crear.xhtml
@@ -36,7 +36,7 @@
                     </p:selectOneMenu>
                 </p:panelGrid>
                 <p:tooltip for="nombre">
-                    <h:outputText value="Nombre del grado, ejemplo: Marco teórico"/>
+                    <h:outputText value="Nombre del grado, ejemplo: 7°"/>
                 </p:tooltip>
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
