--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/index.xhtml
@@ -40,25 +40,25 @@
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              reflow="true">
-                    <p:column headerText="Título" filterBy="#{car.evNombre}" filterable="true" filterMatchMode="contains">
+                    <p:column headerText="Título" style="width: 30%" filterBy="#{car.evNombre}" filterable="true" filterMatchMode="contains">
                         #{car.evNombre}
                     </p:column>
-                    <p:column headerText="Tipo de Evaluación" filterBy="#{car.evTipo}" filterable="true" filterMatchMode="contains">
+                    <p:column headerText="Tipo de Evaluación" style="width: 10%" filterBy="#{car.evTipo}" filterable="true" filterMatchMode="contains">
                         #{car.evTipo}
                     </p:column>
-                    <p:column headerText="Fecha de Inicio" filterBy="#{car.evFechaInicio}" filterable="true" filterMatchMode="contains">
+                    <p:column headerText="Fecha de Inicio" style="width: 10%" filterBy="#{car.evFechaInicio}" filterable="true" filterMatchMode="contains">
                         #{dateUtils.getFormatoFecha(car.evFechaInicio)}
                     </p:column>
-                    <p:column headerText="Fecha de cierre" filterBy="#{car.evFechaCierre}" filterable="true" filterMatchMode="contains">
+                    <p:column headerText="Fecha de cierre" style="width: 10%" filterBy="#{car.evFechaCierre}" filterable="true" filterMatchMode="contains">
                         #{dateUtils.getFormatoFecha(car.evFechaCierre)}
                     </p:column>
-                    <p:column headerText="Duración" filterBy="#{car.evDuracion}" filterable="true" filterMatchMode="contains">
+                    <p:column headerText="Duración" style="width: 10%" filterBy="#{car.evDuracion}" filterable="true" filterMatchMode="contains">
                         #{car.evDuracion}
                     </p:column>
-                    <p:column headerText="Intentos" filterBy="#{car.evIntentos}" filterable="true" filterMatchMode="contains">
+                    <p:column headerText="Intentos" style="width: 10%" filterBy="#{car.evIntentos}" filterable="true" filterMatchMode="contains">
                         #{car.evIntentos}
                     </p:column>
-                    <p:column headerText="Acciones" style="width: 12%">
+                    <p:column headerText="Acciones" style="width: 20%">
 
                         <p:commandLink action="#{gestionarEvaluacionController.mostrar(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Consultar Evaluacion" ></i></p:commandLink>
                         <p:commandLink action="#{gestionarEvaluacionController.verEvaluacion(car)}" rendered="#{gestionarEvaluacionController.evaluacionDisponible(car)}"><i class="icon-list88 Fs30 Red MarRight10" title="Realizar Evaluacion" ></i></p:commandLink>
