--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/bitacora/bitacora.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/bitacora/bitacora.xhtml
@@ -74,7 +74,7 @@
                             <f:selectItem itemLabel="Excel" itemValue="2" />
                             <f:selectItem itemLabel="PDF" itemValue="0" />
                         </p:selectOneRadio>
-                        <p:commandButton  value="Generar" action="#{bitacoraController.generarReporte()}" update="consulta" ajax="false"></p:commandButton>
+                        <p:commandButton  value="Exportar" action="#{bitacoraController.generarReporte()}" update="consulta" ajax="false"></p:commandButton>
                         <p:commandButton value="Refrescar" action="#{bitacoraController.refresh()}" update="consulta"></p:commandButton>
                     </h:panelGrid>
                 </div>
