--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/rendimientoAlumno/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/rendimientoAlumno/index.xhtml
@@ -78,7 +78,7 @@
                             <f:selectItem itemLabel="Excel" itemValue="2" />
                             <f:selectItem itemLabel="PDF" itemValue="0" />
                         </p:selectOneRadio>
-                        <p:commandButton  value="Generar" action="#{rptRendimientoController.generarReporte()}" update="consulta" ajax="false"></p:commandButton>
+                        <p:commandButton  value="Exportar" action="#{rptRendimientoController.generarReporte()}" update="consulta" ajax="false"></p:commandButton>
                         <p:commandButton value="Refrescar" action="#{rptRendimientoController.refresh()}" update="consulta"></p:commandButton>
                     </h:panelGrid>
                 </div>
