--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteParticipacionClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteParticipacionClases/index.xhtml
@@ -20,7 +20,7 @@
         <div class="EmptyBox5"></div>
         <p:panel>
             <h:form>
-                <p:panelGrid columns="5">
+                <p:panelGrid columns="4">
                     <p:outputLabel for="desde" value="Fecha desde: " class=" Responsive"></p:outputLabel>
                     <p:calendar class="Container100" id="desde" value="#{rptParticipacionController.desde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                     <p:outputLabel for="hasta" value="Fecha hasta: " class=" Responsive"></p:outputLabel>
@@ -58,7 +58,7 @@
                             <f:selectItem itemLabel="Excel" itemValue="2" />
                             <f:selectItem itemLabel="PDF" itemValue="0" />
                         </p:selectOneRadio>
-                        <p:commandButton  value="Generar" ajax="false" actionListener="#{rptParticipacionController.generarReporte()}"></p:commandButton>
+                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptParticipacionController.generarReporte()}"></p:commandButton>
                         <p:commandButton value="Refrescar" actionListener="#{rptParticipacionController.refresh()}" update="consulta" ajax="true"></p:commandButton>
                     </h:panelGrid>
                 </div>
