--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteParticipacionClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteParticipacionClases/index.xhtml
@@ -25,7 +25,7 @@
                     <p:calendar class="Container100" id="desde" value="#{rptParticipacionController.desde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                     <p:outputLabel for="hasta" value="Fecha hasta: " class=" Responsive"></p:outputLabel>
                     <p:calendar class="Container100" id="hasta" value="#{rptParticipacionController.hasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de fin" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
-                    <p:commandButton value="generar" actionListener="#{rptParticipacionController.fill()}" update="consulta" ajax="true"></p:commandButton>
+                    <p:commandButton value="Generar" actionListener="#{rptParticipacionController.fill()}" update="consulta" ajax="true"></p:commandButton>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <p:dataTable id="consulta"  var="car" value="#{rptParticipacionController.listDatos}" 
@@ -58,7 +58,7 @@
                             <f:selectItem itemLabel="Excel" itemValue="2" />
                             <f:selectItem itemLabel="PDF" itemValue="0" />
                         </p:selectOneRadio>
-                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptParticipacionController.generarReporte()}"></p:commandButton>
+                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptParticipacionController.GenerarReporte()}"></p:commandButton>
                         <p:commandButton value="Refrescar" actionListener="#{rptParticipacionController.refresh()}" update="consulta" ajax="true"></p:commandButton>
                     </h:panelGrid>
                 </div>
