--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteMatricula/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteMatricula/index.xhtml
@@ -25,7 +25,7 @@
                     <p:calendar class="Container100" id="desde" value="#{rptMatriculaController.desde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                     <p:outputLabel for="hasta" value="Hasta: " class=" Responsive"></p:outputLabel>
                     <p:calendar class="Container100" id="hasta" value="#{rptMatriculaController.hasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de fin" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
-                    <p:commandButton value="generar" actionListener="#{rptMatriculaController.fill()}" update="consulta" ajax="true"></p:commandButton>
+                    <p:commandButton value="Generar" actionListener="#{rptMatriculaController.fill()}" update="consulta" ajax="true"></p:commandButton>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <p:dataTable id="consulta"  var="car" value="#{rptMatriculaController.listDatos}" 
@@ -61,7 +61,7 @@
                             <f:selectItem itemLabel="Excel" itemValue="2" />
                             <f:selectItem itemLabel="PDF" itemValue="0" />
                         </p:selectOneRadio>
-                        <p:commandButton  value="Exportar" action="#{rptMatriculaController.generarReporte()}" update="consulta" ajax="false"></p:commandButton>
+                        <p:commandButton  value="Exportar" action="#{rptMatriculaController.GenerarReporte()}" update="consulta" ajax="false"></p:commandButton>
                         <p:commandButton value="Refrescar" action="#{rptMatriculaController.refresh()}" update="consulta"></p:commandButton>
                     </h:panelGrid>
                 </div>
