--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/editar.xhtml
@@ -74,11 +74,8 @@
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
                     <p:commandButton value="Guardar" tabindex="12" action="#{gestionarDocentesController.guardarModifica()}" update="p1,focus" />
-                    <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="p1,archivo,fotoSubida,focus" resetValues="true" />
-                    </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
-                        <p:ajax update="p1,archivo,fotoSubida" resetValues="true" listener="#{gestionarDocentesController.setIndexMenu(0)}"/>
+                        <p:ajax update="p1,archivo,fotoSubida" resetValues="true" listener="#{gestionarDocentesController.cancelaModifica(gestionarDocentesController.docenteModifica)}"/>
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
